/**
 * Client gRPC pour le service de traduction Meeshy
 * Int√©gration avec le WebSocket handler pour traduction en temps r√©el
 */

import { createChannel, createClient, Metadata, ClientOptions } from 'nice-grpc';
import { 
  TranslationServiceDefinition,
  TranslateRequest,
  TranslateResponse,
  TranslateMultipleRequest,
  TranslateMultipleResponse,
  DetectLanguageRequest,
  DetectLanguageResponse,
  SupportedLanguagesRequest,
  SupportedLanguagesResponse,
  ServiceStatsRequest,
  ServiceStatsResponse
} from './generated/translation';
import { logger } from '../utils/logger';

export interface TranslationResult {
  translated_text: string;
  detected_source_language: string;
  confidence_score: number;
  model_tier: 'basic' | 'medium' | 'premium';
  processing_time_ms: number;
  from_cache: boolean;
}

export interface MultipleTranslationResult {
  translations: Array<{
    target_language: string;
    translated_text: string;
    confidence_score: number;
    model_tier: 'basic' | 'medium' | 'premium';
    processing_time_ms: number;
    from_cache: boolean;
  }>;
  detected_source_language: string;
}

export interface LanguageDetectionResult {
  detected_language: string;
  confidence_score: number;
  complexity_score: number;
  recommended_model_tier: 'basic' | 'medium' | 'premium';
}

export interface ServiceStats {
  cache_size: number;
  supported_languages_count: number;
  models_loaded_count: number;
  device_info: string;
  service_ready: boolean;
}

export class MeeshyTranslationClient {
  private client: ReturnType<typeof createClient<TranslationServiceDefinition>>;
  private channel: any;
  private isConnected: boolean = false;
  private reconnectAttempts: number = 0;
  private maxReconnectAttempts: number = 5;
  private reconnectDelay: number = 1000; // 1 seconde

  constructor(
    private host: string = process.env.TRANSLATION_SERVICE_HOST || 'localhost',
    private port: number = parseInt(process.env.TRANSLATION_SERVICE_PORT || '50051')
  ) {
    this.initialize();
  }

  private initialize(): void {
    try {
      const address = `${this.host}:${this.port}`;
      logger.info(`üîå Connexion au service de traduction: ${address}`);

      this.channel = createChannel(address);
      this.client = createClient(TranslationServiceDefinition, this.channel);
      this.isConnected = true;
      this.reconnectAttempts = 0;

      logger.info('‚úÖ Client gRPC de traduction initialis√©');
    } catch (error) {
      logger.error('‚ùå Erreur initialisation client gRPC:', error);
      this.isConnected = false;
      this.scheduleReconnect();
    }
  }

  private scheduleReconnect(): void {
    if (this.reconnectAttempts < this.maxReconnectAttempts) {
      this.reconnectAttempts++;
      const delay = this.reconnectDelay * this.reconnectAttempts;
      
      logger.warn(`üîÑ Tentative de reconnexion ${this.reconnectAttempts}/${this.maxReconnectAttempts} dans ${delay}ms`);
      
      setTimeout(() => {
        this.initialize();
      }, delay);
    } else {
      logger.error('‚ùå Nombre maximum de tentatives de reconnexion atteint');
    }
  }

  /**
   * Traduit un texte vers une langue cible
   */
  async translateText(
    text: string,
    targetLanguage: string,
    sourceLanguage?: string
  ): Promise<TranslationResult | null> {
    if (!this.isConnected) {
      logger.error('‚ùå Service de traduction non connect√©');
      return null;
    }

    try {
      const request: TranslateRequest = {
        text,
        target_language: targetLanguage,
        source_language: sourceLanguage || ''
      };

      const response = await this.client.translateText(request);

      const result: TranslationResult = {
        translated_text: response.translated_text,
        detected_source_language: response.detected_source_language,
        confidence_score: response.confidence_score,
        model_tier: response.model_tier as 'basic' | 'medium' | 'premium',
        processing_time_ms: response.processing_time_ms,
        from_cache: response.from_cache
      };

      logger.info(`‚úÖ Traduction r√©ussie: ${sourceLanguage || 'auto'} -> ${targetLanguage} (${response.model_tier}, ${response.processing_time_ms}ms)`);
      return result;

    } catch (error) {
      logger.error('‚ùå Erreur traduction:', error);
      
      // Tentative de reconnexion en cas d'erreur
      this.isConnected = false;
      this.scheduleReconnect();
      
      return null;
    }
  }

  /**
   * Traduit un texte vers plusieurs langues en parall√®le
   */
  async translateMultiple(
    text: string,
    targetLanguages: string[],
    sourceLanguage?: string
  ): Promise<MultipleTranslationResult | null> {
    if (!this.isConnected) {
      logger.error('‚ùå Service de traduction non connect√©');
      return null;
    }

    try {
      const request: TranslateMultipleRequest = {
        text,
        target_languages: targetLanguages,
        source_language: sourceLanguage || ''
      };

      const response = await this.client.translateMultiple(request);

      const result: MultipleTranslationResult = {
        translations: response.translations.map(t => ({
          target_language: t.target_language,
          translated_text: t.translated_text,
          confidence_score: t.confidence_score,
          model_tier: t.model_tier as 'basic' | 'medium' | 'premium',
          processing_time_ms: t.processing_time_ms,
          from_cache: t.from_cache
        })),
        detected_source_language: response.detected_source_language
      };

      logger.info(`‚úÖ Traduction multiple r√©ussie: ${targetLanguages.length} langues`);
      return result;

    } catch (error) {
      logger.error('‚ùå Erreur traduction multiple:', error);
      
      this.isConnected = false;
      this.scheduleReconnect();
      
      return null;
    }
  }

  /**
   * D√©tecte la langue d'un texte avec analyse de complexit√©
   */
  async detectLanguage(text: string): Promise<LanguageDetectionResult | null> {
    if (!this.isConnected) {
      logger.error('‚ùå Service de traduction non connect√©');
      return null;
    }

    try {
      const request: DetectLanguageRequest = { text };
      const response = await this.client.detectLanguage(request);

      const result: LanguageDetectionResult = {
        detected_language: response.detected_language,
        confidence_score: response.confidence_score,
        complexity_score: response.complexity_score,
        recommended_model_tier: response.recommended_model_tier as 'basic' | 'medium' | 'premium'
      };

      logger.info(`‚úÖ Langue d√©tect√©e: ${response.detected_language} (confiance: ${response.confidence_score.toFixed(2)}, complexit√©: ${response.complexity_score.toFixed(2)})`);
      return result;

    } catch (error) {
      logger.error('‚ùå Erreur d√©tection langue:', error);
      
      this.isConnected = false;
      this.scheduleReconnect();
      
      return null;
    }
  }

  /**
   * R√©cup√®re la liste des langues support√©es
   */
  async getSupportedLanguages(): Promise<string[] | null> {
    if (!this.isConnected) {
      logger.error('‚ùå Service de traduction non connect√©');
      return null;
    }

    try {
      const request: SupportedLanguagesRequest = {};
      const response = await this.client.getSupportedLanguages(request);

      logger.info(`‚úÖ Langues support√©es r√©cup√©r√©es: ${response.languages.length} langues`);
      return response.languages;

    } catch (error) {
      logger.error('‚ùå Erreur r√©cup√©ration langues support√©es:', error);
      
      this.isConnected = false;
      this.scheduleReconnect();
      
      return null;
    }
  }

  /**
   * R√©cup√®re les statistiques du service
   */
  async getServiceStats(): Promise<ServiceStats | null> {
    if (!this.isConnected) {
      logger.error('‚ùå Service de traduction non connect√©');
      return null;
    }

    try {
      const request: ServiceStatsRequest = {};
      const response = await this.client.getServiceStats(request);

      const result: ServiceStats = {
        cache_size: response.cache_size,
        supported_languages_count: response.supported_languages_count,
        models_loaded_count: response.models_loaded_count,
        device_info: response.device_info,
        service_ready: response.service_ready
      };

      logger.info('‚úÖ Statistiques du service r√©cup√©r√©es');
      return result;

    } catch (error) {
      logger.error('‚ùå Erreur r√©cup√©ration statistiques:', error);
      
      this.isConnected = false;
      this.scheduleReconnect();
      
      return null;
    }
  }

  /**
   * V√©rifie si le service est connect√© et pr√™t
   */
  isReady(): boolean {
    return this.isConnected;
  }

  /**
   * Ferme la connexion proprement
   */
  async close(): Promise<void> {
    try {
      if (this.channel) {
        this.channel.close();
        this.isConnected = false;
        logger.info('‚úÖ Connexion gRPC ferm√©e proprement');
      }
    } catch (error) {
      logger.error('‚ùå Erreur fermeture connexion gRPC:', error);
    }
  }

  /**
   * Traduction en temps r√©el pour les messages WebSocket
   * Optimis√©e pour les conversations
   */
  async translateForChat(
    text: string,
    targetLanguages: string[],
    userId: string,
    conversationId: string
  ): Promise<MultipleTranslationResult | null> {
    const startTime = Date.now();

    // Ajouter des m√©tadonn√©es de contexte
    const metadata = new Metadata();
    metadata.set('user-id', userId);
    metadata.set('conversation-id', conversationId);
    metadata.set('request-type', 'chat');

    try {
      // D√©tection rapide de langue si n√©cessaire
      const detection = await this.detectLanguage(text);
      const sourceLanguage = detection?.detected_language || 'auto';

      // Traduction vers toutes les langues cibles
      const result = await this.translateMultiple(text, targetLanguages, sourceLanguage);

      if (result) {
        const totalTime = Date.now() - startTime;
        logger.info(`üí¨ Traduction chat compl√©t√©e en ${totalTime}ms pour conversation ${conversationId}`);
      }

      return result;

    } catch (error) {
      logger.error(`‚ùå Erreur traduction chat pour conversation ${conversationId}:`, error);
      return null;
    }
  }
}

// Instance singleton
export const translationClient = new MeeshyTranslationClient();

// Gestion propre de la fermeture
process.on('SIGTERM', async () => {
  await translationClient.close();
});

process.on('SIGINT', async () => {
  await translationClient.close();
});

export default translationClient;
