/**
 * Serveur Fastify simplifi√© avec WebSocket et traduction
 * Version optimis√©e pour Meeshy
 */

import Fastify from 'fastify';
import cors from '@fastify/cors';
import { PrismaClient } from '../../shared/generated';
import { webSocketManager } from './websocket/websocket-manager';
import { logger } from './utils/logger';

// Configuration du serveur
const server = Fastify({
  logger: {
    level: process.env.LOG_LEVEL || 'info'
  }
});

// Initialisation de Prisma
const prisma = new PrismaClient();

// Configuration CORS
server.register(cors, {
  origin: [
    'http://localhost:3000',
    'http://localhost:3001',
    process.env.FRONTEND_URL || 'http://localhost:3000'
  ],
  credentials: true
});

// Configuration WebSocket avec traduction
webSocketManager.setupWebSocket(server);

// Routes de base
server.get('/', async (request, reply) => {
  return { 
    message: 'Meeshy API Gateway with Translation',
    version: '2.0.0',
    features: ['WebSocket', 'Real-time Translation', 'Multi-language Chat'],
    endpoints: {
      websocket: '/ws',
      health: '/health',
      stats: '/stats'
    },
    translation: {
      service: 'Python gRPC Translation Service',
      models: ['basic', 'medium', 'premium'],
      languages: ['fr', 'en', 'es', 'de', 'pt', 'it', 'nl', 'ru', 'zh', 'ja', 'ko', 'ar', 'hi', 'tr', 'pl', 'sv']
    }
  };
});

// Route de sant√©
server.get('/health', async (request, reply) => {
  try {
    // V√©rifier la connexion √† la base de donn√©es
    await prisma.$queryRaw`SELECT 1`;
    
    // V√©rifier le service WebSocket
    const wsStats = webSocketManager.getStats();
    
    return {
      status: 'healthy',
      timestamp: new Date().toISOString(),
      services: {
        database: 'connected',
        websocket: 'active',
        translation: wsStats.translationServiceReady ? 'ready' : 'loading'
      },
      connections: {
        total: wsStats.totalConnections,
        authenticated: wsStats.authenticatedConnections,
        users: wsStats.uniqueUsers
      }
    };
  } catch (error) {
    logger.error('‚ùå Erreur health check:', error);
    reply.status(503);
    return {
      status: 'unhealthy',
      timestamp: new Date().toISOString(),
      error: 'Service unavailable'
    };
  }
});

// Route des statistiques WebSocket et traduction
server.get('/stats', async (request, reply) => {
  const stats = webSocketManager.getStats();
  
  return {
    server: {
      uptime: process.uptime(),
      memory: process.memoryUsage(),
      node_version: process.version,
      timestamp: new Date().toISOString()
    },
    websocket: stats,
    database: {
      status: 'connected'
    }
  };
});

// Route de test de traduction (pour debug)
server.get('/test-translation', async (request, reply) => {
  try {
    const { text = 'Hello, how are you?', languages = 'fr,es' } = request.query as any;
    const targetLanguages = languages.split(',');
    
    // Simuler une traduction pour le test
    return {
      original: text,
      translations: targetLanguages.map((lang: string) => ({
        language: lang,
        text: `[${lang.toUpperCase()}] ${text}`, // Simulation
        model: 'test'
      })),
      timestamp: new Date().toISOString()
    };
  } catch (error) {
    logger.error('‚ùå Erreur test traduction:', error);
    reply.status(500);
    return { error: 'Translation test failed' };
  }
});

// Route pour r√©cup√©rer l'historique des messages d'une conversation
server.get('/conversations/:id/messages', async (request, reply) => {
  try {
    const { id } = request.params as { id: string };
    const { limit = 50, offset = 0 } = request.query as any;

    const messages = await prisma.message.findMany({
      where: { conversationId: id },
      include: {
        sender: {
          select: { id: true, username: true }
        },
        translations: true
      },
      orderBy: { createdAt: 'desc' },
      take: parseInt(limit),
      skip: parseInt(offset)
    });

    return {
      messages: messages.reverse(), // Ordre chronologique
      count: messages.length,
      hasMore: messages.length === parseInt(limit)
    };
  } catch (error) {
    logger.error('‚ùå Erreur r√©cup√©ration messages:', error);
    reply.status(500);
    return { error: 'Failed to fetch messages' };
  }
});

// Route pour r√©cup√©rer les traductions d'un message
server.get('/messages/:id/translations', async (request, reply) => {
  try {
    const { id } = request.params as { id: string };

    const translations = await prisma.messageTranslation.findMany({
      where: { messageId: id },
      orderBy: { createdAt: 'desc' }
    });

    return {
      messageId: id,
      translations,
      count: translations.length
    };
  } catch (error) {
    logger.error('‚ùå Erreur r√©cup√©ration traductions:', error);
    reply.status(500);
    return { error: 'Failed to fetch translations' };
  }
});

// Middleware d'authentification JWT pour les routes prot√©g√©es
server.addHook('preHandler', async (request, reply) => {
  // Routes publiques (pas d'authentification requise)
  const publicRoutes = ['/', '/health', '/stats', '/test-translation', '/ws'];
  const isPublicRoute = publicRoutes.some(route => request.url === route || request.url.startsWith(route + '?'));
  
  if (isPublicRoute) {
    return;
  }

  try {
    const token = request.headers.authorization?.replace('Bearer ', '');
    if (!token) {
      reply.status(401).send({ error: 'Token required' });
      return;
    }

    // TODO: V√©rifier le JWT ici pour les routes prot√©g√©es
    // Pour maintenant, on laisse passer
  } catch (error) {
    reply.status(401).send({ error: 'Invalid token' });
  }
});

// Gestionnaire d'erreur global
server.setErrorHandler((error, request, reply) => {
  logger.error('‚ùå Erreur serveur:', {
    error: error.message,
    stack: error.stack,
    url: request.url,
    method: request.method
  });
  
  reply.status(500).send({
    error: 'Internal Server Error',
    message: process.env.NODE_ENV === 'development' ? error.message : 'Something went wrong',
    timestamp: new Date().toISOString()
  });
});

// D√©marrage du serveur
const start = async () => {
  try {
    const port = parseInt(process.env.PORT || '8080');
    const host = process.env.HOST || '0.0.0.0';
    
    logger.info('üöÄ D√©marrage du serveur Meeshy avec traduction...');
    
    // V√©rifier la connexion √† la base de donn√©es
    await prisma.$connect();
    logger.info('‚úÖ Connexion √† la base de donn√©es √©tablie');
    
    // D√©marrer le serveur
    await server.listen({ port, host });
    
    logger.info(`‚úÖ Serveur Meeshy d√©marr√© sur http://${host}:${port}`);
    logger.info(`üîå WebSocket disponible sur ws://${host}:${port}/ws`);
    logger.info(`üìä Statistiques disponibles sur http://${host}:${port}/stats`);
    logger.info(`üåê Test traduction disponible sur http://${host}:${port}/test-translation`);
    logger.info(`üîß Routes API:`);
    logger.info(`   GET /conversations/:id/messages - Historique des messages`);
    logger.info(`   GET /messages/:id/translations - Traductions d'un message`);
    
  } catch (error) {
    logger.error('‚ùå Erreur d√©marrage serveur:', error);
    process.exit(1);
  }
};

// Gestion propre de l'arr√™t
const gracefulShutdown = async (signal: string) => {
  logger.info(`üì° Signal ${signal} re√ßu, arr√™t en cours...`);
  
  try {
    await server.close();
    await prisma.$disconnect();
    logger.info('‚úÖ Serveur arr√™t√© proprement');
    process.exit(0);
  } catch (error) {
    logger.error('‚ùå Erreur lors de l\'arr√™t:', error);
    process.exit(1);
  }
};

// √âcouter les signaux d'arr√™t
process.on('SIGTERM', () => gracefulShutdown('SIGTERM'));
process.on('SIGINT', () => gracefulShutdown('SIGINT'));

// Gestion des erreurs non captur√©es
process.on('unhandledRejection', (reason, promise) => {
  logger.error('‚ùå Unhandled Rejection:', { reason, promise });
});

process.on('uncaughtException', (error) => {
  logger.error('‚ùå Uncaught Exception:', error);
  process.exit(1);
});

// D√©marrer le serveur
if (require.main === module) {
  start();
}

export default server;
