const fastify = require('fastify');
const { PrismaClient } = require('../../shared/generated');
const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');

// Configuration gRPC
const PROTO_PATH = path.join(__dirname, '../..', 'translation-service', 'translation.proto');
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const translationProto = grpc.loadPackageDefinition(packageDefinition).translation;

// Client de traduction gRPC
class TranslationClient {
  constructor() {
    this.client = new translationProto.TranslationService(
      'localhost:50051',
      grpc.credentials.createInsecure()
    );
    this.connected = false;
  }

  async connect() {
    return new Promise((resolve, reject) => {
      const deadline = new Date();
      deadline.setSeconds(deadline.getSeconds() + 5);
      
      this.client.waitForReady(deadline, (error) => {
        if (error) {
          console.error('âŒ Connexion gRPC Ã©chouÃ©e:', error.message);
          this.connected = false;
          reject(error);
        } else {
          console.log('âœ… Client gRPC connectÃ© au service de traduction');
          this.connected = true;
          resolve();
        }
      });
    });
  }

  async ensureConnected() {
    if (!this.connected) {
      await this.connect();
    }
  }

  async translateText(text, targetLanguage, sourceLanguage) {
    try {
      await this.ensureConnected();

      return new Promise((resolve, reject) => {
        const request = {
          text,
          target_language: targetLanguage,
          source_language: sourceLanguage || '',
          user_id: 'demo-user'
        };

        this.client.TranslateText(request, (error, response) => {
          if (error) {
            console.error('âŒ Erreur traduction gRPC:', error);
            reject(error);
          } else {
            console.log(`âœ… Traduction gRPC rÃ©ussie: ${text} -> ${response.translated_text}`);
            resolve({
              translated_text: response.translated_text,
              source_language: response.source_language,
              target_language: targetLanguage,
              confidence_score: response.confidence_score,
              model_tier: response.model_tier,
              processing_time_ms: response.processing_time_ms,
              from_cache: response.from_cache
            });
          }
        });
      });
    } catch (error) {
      console.error('âŒ Erreur connexion gRPC:', error);
      // Fallback vers le mock en cas d'erreur
      return this.mockTranslate(text, targetLanguage, sourceLanguage);
    }
  }

  async detectLanguage(text) {
    try {
      await this.ensureConnected();

      return new Promise((resolve, reject) => {
        const request = { text };

        this.client.DetectLanguage(request, (error, response) => {
          if (error) {
            console.error('âŒ Erreur dÃ©tection langue gRPC:', error);
            reject(error);
          } else {
            console.log(`âœ… DÃ©tection langue gRPC: ${text} -> ${response.language}`);
            resolve({
              language: response.language,
              confidence: response.confidence
            });
          }
        });
      });
    } catch (error) {
      console.error('âŒ Erreur dÃ©tection gRPC:', error);
      // Fallback vers le mock
      return this.mockDetectLanguage(text);
    }
  }

  // MÃ©thodes de fallback (mock) en cas d'erreur gRPC
  mockTranslate(text, targetLang, sourceLang = 'fr') {
    console.log('âš ï¸ Utilisation du mock de traduction (gRPC indisponible)');
    
    // PrÃ©diction du modÃ¨le basÃ©e sur la longueur
    let modelTier = 'basic';
    if (text.length > 100) modelTier = 'premium';
    else if (text.length > 20) modelTier = 'medium';

    const translations = {
      'fr': {
        'en': text.replace(/bonjour/gi, 'hello').replace(/au revoir/gi, 'goodbye'),
        'es': text.replace(/bonjour/gi, 'hola').replace(/au revoir/gi, 'adiÃ³s'),
        'de': text.replace(/bonjour/gi, 'hallo').replace(/au revoir/gi, 'auf wiedersehen')
      },
      'en': {
        'fr': text.replace(/hello/gi, 'bonjour').replace(/goodbye/gi, 'au revoir'),
        'es': text.replace(/hello/gi, 'hola').replace(/goodbye/gi, 'adiÃ³s'),
        'de': text.replace(/hello/gi, 'hallo').replace(/goodbye/gi, 'auf wiedersehen')
      }
    };
    
    const result = translations[sourceLang]?.[targetLang] || `[${targetLang}] ${text}`;
    
    return {
      translated_text: result,
      source_language: sourceLang,
      target_language: targetLang,
      confidence_score: 0.85,
      model_tier: modelTier,
      processing_time_ms: Math.floor(Math.random() * 200) + 100,
      from_cache: false
    };
  }

  mockDetectLanguage(text) {
    console.log('âš ï¸ Utilisation du mock de dÃ©tection (gRPC indisponible)');
    
    const frenchWords = ['bonjour', 'merci', 'salut', 'comment', 'allez'];
    const englishWords = ['hello', 'thank', 'how', 'are', 'you'];
    
    const lowerText = text.toLowerCase();
    const frenchCount = frenchWords.filter(word => lowerText.includes(word)).length;
    const englishCount = englishWords.filter(word => lowerText.includes(word)).length;
    
    if (frenchCount > englishCount) {
      return { language: 'fr', confidence: 0.8 + frenchCount * 0.05 };
    } else if (englishCount > 0) {
      return { language: 'en', confidence: 0.8 + englishCount * 0.05 };
    }
    
    return { language: 'fr', confidence: 0.5 };
  }
}

// Serveur principal
async function createServer() {
  const server = fastify({ 
    logger: {
      level: 'info'
    }
  });
  
  const prisma = new PrismaClient();
  const translationClient = new TranslationClient();
  
  // Tenter de se connecter au service gRPC au dÃ©marrage
  try {
    await translationClient.connect();
    console.log('ğŸš€ Service de traduction gRPC connectÃ©');
  } catch (error) {
    console.warn('âš ï¸ Service de traduction gRPC non disponible, utilisation du fallback mock');
  }
  
  // Configuration CORS
  await server.register(require('@fastify/cors'), {
    origin: ['http://localhost:3100', 'http://localhost:3000', 'http://localhost:3001'],
    credentials: true
  });
  
  // Support WebSocket
  await server.register(require('@fastify/websocket'));
  
  // Connexions WebSocket actives
  const connections = new Map();
  
  // Route WebSocket
  server.register(async function (fastify) {
    fastify.get('/ws', { websocket: true }, (connection, req) => {
      const userId = Math.random().toString(36).substring(7);
      connections.set(userId, connection);
      
      console.log(`âœ… WebSocket connectÃ©: ${userId}`);
      
      // Envoyer confirmation
      connection.socket.send(JSON.stringify({
        type: 'status',
        content: 'connected',
        userId,
        timestamp: Date.now()
      }));
      
      // Ã‰couter les messages
      connection.socket.on('message', async (data) => {
        try {
          const message = JSON.parse(data.toString());
          console.log(`ğŸ“¨ Message reÃ§u de ${userId}:`, message);
          
          if (message.type === 'message' && message.content) {
            // Sauvegarder le message (mock)
            const savedMessage = {
              id: Math.random().toString(36),
              content: message.content,
              senderId: userId,
              conversationId: message.conversationId || 'default',
              timestamp: Date.now()
            };
            
            // Diffuser le message Ã  toutes les connexions
            const response = {
              type: 'message',
              ...savedMessage,
              sender: { username: `User_${userId.substring(0, 4)}` }
            };
            
            connections.forEach((conn, id) => {
              if (conn.socket.readyState === 1) { // WebSocket.OPEN
                conn.socket.send(JSON.stringify(response));
              }
            });
            
            console.log(`ğŸ“¤ Message diffusÃ©: ${message.content}`);
          }
          
          if (message.type === 'translation' && message.content && message.targetLanguage) {
            // Traduction via gRPC
            const result = await translationClient.translateText(
              message.content,
              message.targetLanguage
            );
            
            connection.socket.send(JSON.stringify({
              type: 'translation',
              messageId: message.messageId,
              original: message.content,
              translated: result.translated_text,
              targetLanguage: message.targetLanguage,
              modelTier: result.model_tier,
              processingTime: result.processing_time_ms,
              timestamp: Date.now()
            }));
            
            console.log(`ğŸ”„ Traduction envoyÃ©e: ${result.translated_text} (${result.model_tier})`);
          }
          
        } catch (error) {
          console.error('âŒ Erreur traitement message:', error);
        }
      });
      
      // GÃ©rer la dÃ©connexion
      connection.socket.on('close', () => {
        connections.delete(userId);
        console.log(`ğŸ“¡ WebSocket dÃ©connectÃ©: ${userId}`);
      });
      
      connection.socket.on('error', (error) => {
        console.error(`âŒ Erreur WebSocket ${userId}:`, error);
        connections.delete(userId);
      });
    });
  });
  
  // Routes API
  
  // Health check amÃ©liorÃ©
  server.get('/health', async () => {
    let grpcStatus = 'disconnected';
    try {
      if (translationClient.connected) {
        grpcStatus = 'connected';
      } else {
        await translationClient.connect();
        grpcStatus = 'connected';
      }
    } catch (error) {
      grpcStatus = 'error';
    }

    return {
      status: 'ok',
      timestamp: new Date().toISOString(),
      connections: connections.size,
      uptime: process.uptime(),
      services: {
        grpc: grpcStatus,
        database: 'connected',
        websocket: 'active'
      }
    };
  });
  
  // Test de traduction avec gRPC
  server.post('/test-translation', async (request) => {
    const body = request.body;
    const { text, targetLanguage, sourceLanguage } = body;
    
    if (!text || !targetLanguage) {
      return { 
        success: false,
        error: 'ParamÃ¨tres manquants: text et targetLanguage sont requis' 
      };
    }
    
    if (text.length > 300) {
      return {
        success: false,
        error: 'Texte trop long (maximum 300 caractÃ¨res)'
      };
    }
    
    try {
      console.log(`ğŸ”„ Traduction demandÃ©e: "${text}" vers ${targetLanguage}`);
      
      const result = await translationClient.translateText(text, targetLanguage, sourceLanguage);
      
      console.log(`âœ… Traduction terminÃ©e: "${result.translated_text}" (${result.model_tier}, ${result.processing_time_ms}ms)`);
      
      return {
        success: true,
        original: text,
        translation: result
      };
    } catch (error) {
      console.error('âŒ Erreur traduction:', error);
      return { 
        success: false,
        error: 'Erreur du service de traduction' 
      };
    }
  });
  
  // Test de dÃ©tection de langue avec gRPC
  server.post('/test-detection', async (request) => {
    const body = request.body;
    const { text } = body;
    
    if (!text) {
      return { 
        success: false,
        error: 'ParamÃ¨tre manquant: text est requis' 
      };
    }
    
    try {
      console.log(`ğŸ” DÃ©tection langue demandÃ©e: "${text}"`);
      
      const result = await translationClient.detectLanguage(text);
      
      console.log(`âœ… Langue dÃ©tectÃ©e: ${result.language} (${result.confidence})`);
      
      return {
        success: true,
        text,
        detection: result
      };
    } catch (error) {
      console.error('âŒ Erreur dÃ©tection:', error);
      return { 
        success: false,
        error: 'Erreur du service de dÃ©tection' 
      };
    }
  });
  
  // Statistiques dÃ©taillÃ©es
  server.get('/stats', async () => {
    let grpcConnected = false;
    try {
      await translationClient.ensureConnected();
      grpcConnected = true;
    } catch (error) {
      grpcConnected = false;
    }

    return {
      connections: connections.size,
      activeUsers: Array.from(connections.keys()),
      uptime: process.uptime(),
      memory: process.memoryUsage(),
      node_version: process.version,
      services: {
        grpc_translation: grpcConnected ? 'connected' : 'disconnected',
        websocket: 'active',
        database: 'connected'
      }
    };
  });
  
  // Messages de test (mock)
  server.get('/messages', async () => {
    return {
      messages: [
        {
          id: '1',
          content: 'Bonjour tout le monde !',
          sender: { username: 'Alice' },
          timestamp: Date.now() - 60000
        },
        {
          id: '2',
          content: 'Hello everyone!',
          sender: { username: 'Bob' },
          timestamp: Date.now() - 30000
        }
      ]
    };
  });
  
  // Gestion propre de l'arrÃªt
  const gracefulShutdown = async () => {
    console.log('ğŸ›‘ ArrÃªt du serveur...');
    
    // Fermer toutes les connexions WebSocket
    connections.forEach((conn) => {
      if (conn.socket.readyState === 1) {
        conn.socket.close(1001, 'Server shutdown');
      }
    });
    
    // Fermer le client gRPC
    if (translationClient.client) {
      translationClient.client.close();
    }
    
    await prisma.$disconnect();
    await server.close();
    process.exit(0);
  };
  
  process.on('SIGINT', gracefulShutdown);
  process.on('SIGTERM', gracefulShutdown);
  
  return server;
}

// DÃ©marrage du serveur
async function start() {
  try {
    const server = await createServer();
    const port = parseInt(process.env.PORT || '3001');
    const host = process.env.HOST || '0.0.0.0';
    
    await server.listen({ port, host });
    
    console.log(`ğŸš€ Serveur Fastify dÃ©marrÃ© sur http://${host}:${port}`);
    console.log(`ğŸ“¡ WebSocket: ws://${host}:${port}/ws`);
    console.log(`ğŸ¥ Health: http://${host}:${port}/health`);
    console.log(`ğŸ“Š Stats: http://${host}:${port}/stats`);
    console.log(`ğŸ”„ Test traduction: POST http://${host}:${port}/test-translation`);
    console.log(`ğŸ” Test dÃ©tection: POST http://${host}:${port}/test-detection`);
    
  } catch (err) {
    console.error('âŒ Erreur dÃ©marrage serveur:', err);
    process.exit(1);
  }
}

if (require.main === module) {
  start();
}

module.exports = { createServer };
